samples/_failures_safe/1761716947_12f3c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9226e6c0.c: In function ‘main’:
./samples/SAFE/__tmp_9226e6c0.c:133:5: error: expected declaration or statement at end of input
  133 |     if (!read_matrix_from_input(&mat_a)) {
      |     ^~
./samples/SAFE/__tmp_9226e6c0.c:133:5: error: expected declaration or statement at end of input
